--- a/study/src/main/webapp/resources/scss/break.scss
+++ b/study/src/main/webapp/resources/scss/break.scss
@@ -8,4 +8,12 @@ $breakpoints: (
     medium: 768px,
     large: 1024px,
     huge: 1200px,
+
+
+    pc: 1200px,
+    note: 1024px,
+    tablet: 768px,
+    mobile: 480px,
+    minimum: 320px,
+
 );
